# feder

./: Cargo.toml  README.md  mise.toml
.github/workflows/: main.yaml
crates/feder-core/: Cargo.toml  README.md
crates/feder-core/src/: lib.rs
crates/feder-core/tests/: received_follow_decider.rs
crates/feder-runtime-linux/: Cargo.toml
crates/feder-runtime-linux/src/: main.rs
crates/feder-runtime-server/: Cargo.toml  README.md
crates/feder-runtime-server/src/: actor.rs  app.rs  config.rs  error.rs  inbox.rs  lib.rs  main.rs  note.rs  webfinger.rs
crates/feder-runtime-server/src/storage/: mod.rs  sqlite.rs
crates/feder-vocab/: Cargo.toml
crates/feder-vocab/src/: lib.rs
crates/feder-vocab/tests/: phase1_shapes.rs
examples/single-user-server/: Cargo.toml  README.md
examples/single-user-server/src/: main.rs
