[package]
name = "feder-core"
description = "Portable ActivityPub core logic for Feder."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
feder-vocab.workspace = true

[lints]
workspace = true
