[package]
name = "feder-runtime-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
feder-core = { path = "../feder-core" }
feder-vocab = { path = "../feder-vocab" }
axum = "0.8"
serde.workspace = true
thiserror = "2"

[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower.workspace = true

[lints]
workspace = true
