[package]
name = "feder-runtime-server"
description = "Runnable server runtime for Feder on standard operating systems."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
feder-core.workspace = true
feder-vocab.workspace = true
axum = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true

[lints]
workspace = true
