[package]
name = "feder-runtime-server"
description = "Runnable server runtime for Feder on standard operating systems."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
feder-core.workspace = true
feder-vocab.workspace = true
axum = "0.8"
serde.workspace = true
thiserror = "2"
serde_json.workspace = true
percent-encoding = "2.3.2"

[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower.workspace = true

[lints]
workspace = true
