[package]
name = "single-user-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
feder-runtime-server = { path = "../../crates/feder-runtime-server" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
